# smart-file-organizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: cli_main.cpp  cli_main.h
gui/: gui_main.cpp  gui_main.h
lib/: common_lib.cpp  common_lib.h  common_ns.h  smart_rule.cpp  smart_rule.h
samples/: rules.json
samples/rules/: extension-sample-rule.json  regex-sample-rule.json
